<resources>
    <string name="app_name">Match2</string>
    <string name="btn_menu_easy">Easy</string>
    <string name="btn_menu_medium">Medium</string>
    <string name="btn_menu_hard">Hard</string>
    <string name="appName">Match2</string>
    <string name="description">A plain simple matching game</string>
    <string name="gratz">CONGRATULATIONS!</string>
    <string name="acccept">Yes</string>
    <string name="reject">No</string>
    <string name="again">Play again?</string>
</resources>
